option('build_target', type: 'array', choices: ['lib', 'app', 'all'], value: ['lib'], description: 'build library, application, both')
option('cava_font', type: 'boolean', value: true, description: 'build with cava font support')
option('input_alsa', type: 'feature', value: 'auto', description: 'build with support for ALSA')
option('input_portaudio', type: 'feature', value: 'auto', description: 'build with support for portaudio')
option('input_pulse', type: 'feature', value: 'auto', description: 'build with support for Pulse audio')
option('asan', type: 'feature', value: 'auto', description: 'build with AddressSanitizer')
option('tsan', type: 'feature', value: 'auto', description: 'build with ThreadSanitizer')
option('ubsan', type: 'feature', value: 'auto', description: 'build with UndefinedBehaviorSanitizer')
option('input_sndio', type: 'feature', value: 'auto', description: 'build with support for input from sndio')
option('input_pipewire', type: 'feature', value: 'auto', description: 'build with support for input from pipewire')
option('output_sdl', type: 'feature', value: 'auto', description: 'build with support for output to sdl')
option('output_ncurses', type: 'feature', value: 'auto', description: 'build with support for output to ncurses')
option('output_sdl_glsl', type: 'feature', value: 'auto', description: 'build with support for output to sdl_glsl')
option('input_oss', type: 'feature', value: 'auto', description: 'build witn support for input from oss')
option('input_jack', type: 'feature', value: 'auto', description: 'build witn support for input from jack')
